gitops/validators/httpd/base/istio-virtualservice-policies.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd-istio-virtualservice
  namespace: infrastrcuture-demo
spec:
  hosts:
    - "httpd.local.gd"
  http:
    - route:
        - destination:
            host: httpd
            port:
              number: 80
  gateways:
    - "istio-system/public-gateway"
---
