gitops/validators/httpd/base/nginx-ingress-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd
  namespace: infrastrcuture-demo
spec:
  ingressClassName: nginx
  rules:
  - host: httpd.local.gd
    http:
      paths:
      - backend:
          service:
            name: httpd
            port:
              number: 80
        path: /
        pathType: Prefix
---
